fix test controller